# aiui-sdk-os

./: README.md
银河麒麟_飞腾/: README.md
银河麒麟_龙芯/: CMakeLists.txt  README.md  aiui_main.c
银河麒麟_龙芯/aiui/inc/: aiui_api.h  aiui_audio_control.h  aiui_convert_url.h  aiui_device_info.h  aiui_get_upload_info.h  aiui_http_api.h  aiui_list.h  aiui_log.h  aiui_media_parse.h  aiui_message_parse.h  aiui_mp3_decode.h  aiui_player.h  aiui_search_weather.h  aiui_skill_parse.h  aiui_socket_api.h  aiui_upload_dynamic_entity.h  aiui_url_download.h  aiui_websocket_api.h  aiui_wrappers_os.h  base64.h  md5.h  sha256.h
银河麒麟_龙芯/aiui/src/: aiui_api.c  aiui_audio_control.c  aiui_convert_url.c  aiui_get_upload_info.c  aiui_http_api.c  aiui_list.c  aiui_media_parse.c  aiui_message_parse.c  aiui_mp3_decode.c  aiui_os_linux.c  aiui_player.c  aiui_search_weather.c  aiui_skill_parse.c  aiui_socket_api.c  aiui_upload_dynamic_entity.c  aiui_url_download.c  aiui_websocket_api.c  base64.c  cjson.c  md5.c  sha256.c
银河麒麟_龙芯/config/: vtn.ini
银河麒麟_龙芯/depend/alsa/inc/: alas_api.h
银河麒麟_龙芯/depend/alsa/src/: alas_api.c
银河麒麟_龙芯/depend/mad/inc/: mad.h
银河麒麟_龙芯/depend/mbedtls/: debug.h
银河麒麟_龙芯/depend/ringbuf/inc/: ringbuf.h
银河麒麟_龙芯/depend/ringbuf/src/: ringbuf.c
银河麒麟_龙芯/depend/vad/inc/: common.h  fvad.h  resample_by_2_internal.h  signal_processing_library.h  spl_inl.h  vad_core.h  vad_gmm.h
银河麒麟_龙芯/depend/vad/src/: fvad.c  vad_gmm.c
银河麒麟_龙芯/depend/wakeup/inc/: CAEAPI.h  Types.h
银河麒麟_龙芯/depend/wav/inc/: wav_utils.h
银河麒麟_龙芯/depend/wav/src/: wav_utils.cpp
鸿蒙_aarch64/: build.gradle
(+26 files in other folders)
